syntax = "proto3";

package product;

option go_package = "github.com/thapakon-thai/eshop-microservices/proto/product";

service ProductService {
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
  string category_id = 5;
  repeated string sizes = 6;
  repeated string colors = 7;
  map<string, string> images = 8;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category_id = 6;
  repeated string sizes = 7;
  repeated string colors = 8;
  map<string, string> images = 9;
}

message GetProductRequest {
  string id = 1;
}

message ListProductsRequest {
  int32 page = 1;
  int32 limit = 2;
  string category_id = 3;
}

message ListProductsResponse {
  repeated ProductResponse products = 1;
  int32 total_count = 2;
}
